lower required JRE version to 17 for IDE module and dependencies